Bug 229836 - map illegal index values to black.  r=paper, sr=blizzard